force-app/main/default/objects/XFILES__Application_Exception_Audit__c/XFILES__Application_Exception_Audit__c.object-meta.xml
<CustomObject>
    <description>This is used to audit all application exceptions.</description>
    <label>Application Exception Audit</label>
    <nameField>
        <displayFormat>APEXCP-{0000}</displayFormat>
        <label>Application Exception Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Exception Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>