force-app/main/default/objects/XFILES__Application_Exception_Audit__c/fields/XFILES__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>