force-app/main/default/objects/XFILES__Application_Exception_Audit__c/fields/XFILES__Error_Initiated_From__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Error_Initiated_From__c</fullName>
    <label>Error Initiated From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UI</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>