force-app/main/default/objects/XFILES__Application_Exception_Audit__c/fields/XFILES__Error_Related_Info__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Error_Related_Info__c</fullName>
    <label>Error Related Info</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>