force-app/main/default/objects/XFILES__Application_Exception_Audit__c/listViews/XFILES__All.listView-meta.xml
<ListView>
    <fullName>XFILES__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>